# pbtar

./: .gitignore  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/.sqlx/: query-04f0086f3573fa03c57a4e8a47da919590b55eb5f9752b02fced9a0272c46000.json  query-419eb24c38190e5db2018585164d00a97ec7a993e77f64574f826e94bdf49754.json  query-5708d2f5013cdaf27ea440f33581cc6ecfa8564f4569be30d2055d667b014713.json  query-6ff8a7944423832a6d10e6fef52ade07206b4da92da573104c8a5a6ab1f187cc.json  query-a1b54a39e9286a75431d412bc17f48b2037599afd770f302f0415568f91319bd.json  query-bb8da81c1f69585be1f262f91cbf5625372cce97c0cb15041632a4c5392ab4ce.json  query-bdc85ccb94f125209d06027c3909157bf13acf9df73a6a1e2c2dd67eb2550f20.json  query-c1a78eddc5233b980233270c04944db95a09657b5e4087cea5f35c88f4583c1d.json  query-cd0a6979f2d40d827743a486efca674ccd1c2cee81da4a66a78a7fb6e2e7dec1.json  query-d62d9ac68367d75d8c3dab1ac5f999fd7b1a0a45876539eb79361c3e765d8398.json
api/src/: main.rs
api/src/config/: mod.rs
api/src/db/: mod.rs
api/src/errors/: mod.rs
api/src/models/: item.rs  mod.rs  scenario.rs  user.rs
api/src/routes/: mod.rs
api/src/routes/auth/: mod.rs
api/src/routes/health/: mod.rs
api/src/routes/items/: mod.rs
api/src/routes/scenarios/: mod.rs
database/init/: 01-schema.sql
frontend/: Dockerfile  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/[...path]/: +server.ts
frontend/src/routes/scenarios/[id]/: +page.svelte
