[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
bcrypt = "0.15"
jsonwebtoken = "8.3"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
config = "0.13"
